I0260: Abfrage Aufgabenvorschau von mja-api fertig
